change pwa logos

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,10 +1,26 @@
 {
     "short_name": "svelte-pwa",
     "name": "svelte-test-pwa",
-    "icons": [],
     "start_url": "/",
+    "icons": [
+        {
+          "src": "logo512.png",
+          "type": "image/png",
+          "sizes": "512x512"
+        }
+      ],
     "display": "standalone",
     "scope": "/",
     "background_color": "#ffffff",
-    "theme_color": "#ffffff"
+    "theme_color": "#ffffff",
+    "shortcuts": [
+        {
+          "name": "How's weather today?",
+          "short_name": "Today",
+          "description": "View weather information for today",
+          "url": "",
+          "icons": [{ "src": "logo192.png", "sizes": "192x192" }]
+        }
+      ],
+      "description": "Lofi to lofi beats, while using the scratchpad to list down tasks and thoughts"
 }
