--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.3",
-		"@sveltejs/kit": "^1.5.0",
-		"prisma": "^4.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"@sveltejs/kit": "^1.15.0",
+		"prisma": "^4.12.0",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.1.4",
+		"typescript": "^5.0.3",
+		"vite": "^4.2.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.11.0"
+		"@prisma/client": "^4.12.0",
+		"nodemailer": "^6.9.1",
+		"svelte-email": "^0.0.4"
 	},
 	"prisma": {
 		"seed": "node prisma/seed.js"
