--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"build-css": "tailwindcss build src/styles.css -o build/styles.css"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.15.1",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.23",
 		"prisma": "^4.12.0",
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
+		"tailwindcss": "^3.3.2",
 		"vite": "^4.2.1"
 	},
 	"type": "module",
