--- a/.env
+++ b/.env
@@ -9,5 +9,6 @@ DATABASE_URL = "mysql://root:doguy0562@51.159.109.144:32239/maxims"
 SCALEWAY_USER = 'd29b5a94-bacd-4098-8631-2a5639fbde15'
 SCALEWAY_PASS =  'ff5945e4-89f7-458a-981d-af2a3d241a5f'
 
-OVH_MAIL_USER = 'd29b5a94-bacd-4098-8631-2a5639fbde15'
-OVH_MAIL_PASS =  'ff5945e4-89f7-458a-981d-af2a3d241a5f'
+OVH_MAIL_USER = 'jerome@1clusif.org'
+OVH_MAIL_PASS =  '#Jerome0562'
+
