--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.20.5",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.22.3",
 		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.24",
-		"prisma": "^4.16.1",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.4",
-		"tailwindcss": "^3.3.2",
-		"vite": "^4.3.9"
+		"postcss": "^8.4.26",
+		"prisma": "^5.0.0",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.6",
+		"tailwindcss": "^3.3.3",
+		"vite": "^4.4.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.16.1",
+		"@prisma/client": "^5.0.0",
 		"nodemailer": "^6.9.3",
+		"octokit": "^3.0.0",
 		"svelte-email": "^0.0.4"
 	},
 	"prisma": {
