--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ SCALEWAY_USER = 'd29b5a94-bacd-4098-8631-2a5639fbde15'
 SCALEWAY_PASS =  'ff5945e4-89f7-458a-981d-af2a3d241a5f'
 
 OVH_MAIL_USER = 'jerome@1clusif.org'
-OVH_MAIL_PASS =  '#Jerome0562'
+OVH_MAIL_PASS =  '@v6NxUDU4@gwuq8'
 
