change SMTP Fixes #8

--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DATABASE_URL = "mysql://root:doguy0562@51.159.109.144:32239/maxims"
 SCALEWAY_USER = 'd29b5a94-bacd-4098-8631-2a5639fbde15'
 SCALEWAY_PASS =  'ff5945e4-89f7-458a-981d-af2a3d241a5f'
 
-OVH_MAIL_USER = 'jerome@1clusif.org'
-OVH_MAIL_PASS =  '@v6NxUDU4@gwuq8'
+OVH_MAIL_USER = 'admin@1clusif.org'
+OVH_MAIL_PASS =  '8P*qvP4@m&T.jYf'
 
