--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.24.1",
+		"@sveltejs/kit": "^1.25.0",
 		"autoprefixer": "^10.4.15",
-		"postcss": "^8.4.29",
-		"prisma": "^5.2.0",
+		"postcss": "^8.4.30",
+		"prisma": "^5.3.1",
 		"svelte": "^4.2.0",
-		"svelte-check": "^3.5.1",
+		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.2.0",
+		"@prisma/client": "^5.3.1",
+		"minio": "^7.1.3",
+		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.5",
 		"octokit": "^3.1.0",
 		"svelte-email": "^0.0.4"
