--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.25.0",
-		"autoprefixer": "^10.4.15",
+		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.30",
 		"prisma": "^5.3.1",
-		"svelte": "^4.2.0",
+		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.9"
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.3.1",
+		"crypto": "^1.0.1",
 		"minio": "^7.1.3",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.5",
